[CriarUsuario] Service de usuário

--- a/front/src/app/components/usuario/criar-usuario/criar-usuario.component.html
+++ b/front/src/app/components/usuario/criar-usuario/criar-usuario.component.html
@@ -17,7 +17,7 @@
         <input type="text" id="telefone" name="telefone" class="input-cadastro"/>    
     </div>
     <div class="linha-formulario botao">
-        <button (click)="fazerAlgo()" class="botao-cadastrar">
+        <button (click)="cadastrarUsuario()" class="botao-cadastrar">
             Cadastrar
         </button> 
     </div>
