--- a/front/src/app/components/usuario/listar-usuario/listar-usuario.component.html
+++ b/front/src/app/components/usuario/listar-usuario/listar-usuario.component.html
@@ -12,6 +12,6 @@
         <td class="campo-tabela">{{ usuario.email }}</td>
         <td class="campo-tabela">{{ usuario.cpf }}</td>
         <td class="campo-tabela">{{ usuario.phone }}</td>
-        <td class="campo-tabela"> <span class="acao editar">editar</span> | <span class="acao excluir">excluir</span></td>
+        <td class="campo-tabela"> <span class="acao editar" (click)="editarUsuario(usuario.cpf)">editar</span> | <span class="acao excluir" (click)="excluirUsuario(usuario.cpf)">excluir</span></td>
     </tr>
 </table>
