[EditarUsuario] Métodos e fluxos de editar usuário

--- a/front/src/app/components/usuario/criar-usuario/criar-usuario.component.html
+++ b/front/src/app/components/usuario/criar-usuario/criar-usuario.component.html
@@ -21,7 +21,7 @@
         <input type="text" [(ngModel)]="usuario.phone" name="telefone" class="input-cadastro"/>    
     </div>
     <div class="linha-formulario botao">
-        <button (click)="cadastrarUsuario()" class="botao-cadastrar">
+        <button (click)="finalizar()" class="botao-cadastrar">
             Cadastrar
         </button> 
     </div>
