[Geral] Ajustes de navegação

--- a/front/src/app/components/usuario/criar-usuario/criar-usuario.component.html
+++ b/front/src/app/components/usuario/criar-usuario/criar-usuario.component.html
@@ -1,4 +1,5 @@
 <form class="formulario-container">
+    <small class="label-cancelar" (click)="cancelar()">cancelar</small>
     <h2 class="titulo-formulario">Cadastrar Usuário</h2>
     <div class="linha-formulario">
         <label for="nome" class="label-cadastro">Nome completo (sem abreviações)</label>
