--- a/front/src/app/components/usuario/listar-usuario/listar-usuario.component.html
+++ b/front/src/app/components/usuario/listar-usuario/listar-usuario.component.html
@@ -1,17 +1,24 @@
 <table class="tabela-container">
-    <h2 class="titulo-tabela">Listar usuários</h2>
-    <tr class="linha-tabela">
-        <th class="campo-tabela cabecalho">Nome completo</th>
-        <th class="campo-tabela cabecalho">E-mail</th>
-        <th class="campo-tabela cabecalho">CPF</th>
-        <th class="campo-tabela cabecalho">Telefone</th>
-        <th class="campo-tabela cabecalho"></th>
-    </tr>
-    <tr *ngFor="let usuario of usuarios" class="linha-tabela">
-        <td class="campo-tabela">{{ usuario.name }}</td>
-        <td class="campo-tabela">{{ usuario.email }}</td>
-        <td class="campo-tabela">{{ usuario.cpf }}</td>
-        <td class="campo-tabela">{{ usuario.phone }}</td>
-        <td class="campo-tabela"> <span class="acao editar" (click)="editarUsuario(usuario.cpf)">editar</span> | <span class="acao excluir" (click)="excluirUsuario(usuario.cpf)">excluir</span></td>
-    </tr>
+    <thead>
+        <h2 class="titulo-tabela">Listar usuários</h2>
+        <tr class="linha-tabela">
+            <th class="campo-tabela cabecalho">Nome completo</th>
+            <th class="campo-tabela cabecalho">E-mail</th>
+            <th class="campo-tabela cabecalho">CPF</th>
+            <th class="campo-tabela cabecalho">Telefone</th>
+            <th class="campo-tabela cabecalho"></th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let usuario of usuarios" class="linha-tabela">
+            <td class="campo-tabela">{{ usuario.name }}</td>
+            <td class="campo-tabela">{{ usuario.email }}</td>
+            <td class="campo-tabela">{{ usuario.cpf }}</td>
+            <td class="campo-tabela">{{ usuario.phone }}</td>
+            <td class="campo-tabela"> <span class="acao editar" (click)="editarUsuario(usuario.cpf)">editar</span> | <span class="acao excluir" (click)="excluirUsuario(usuario.cpf)">excluir</span></td>
+        </tr>
+    </tbody>
+    <tfoot>
+        <small class="label-adicionar" (click)="adicionarUsuario()">+ adicionar usuário</small>
+    </tfoot>
 </table>
